updated buttons on resource

--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -75,13 +75,16 @@
       <button class="btn btn-info tag-button" data-tag="c#">C#</button>
       <button class="btn btn-info tag-button" data-tag="java">JAVA</button>
       <button class="btn btn-info tag-button" data-tag="sql">SQL</button>
-      <button class="btn btn-info tag-button" data-tag="java">JAVA</button>
-      <button class="btn btn-info tag-button" data-tag="java">JAVA</button>
-      <button class="btn btn-info tag-button" data-tag="java">JAVA</button>
-      <button class="btn btn-info tag-button" data-tag="java">JAVA</button>
-      <button class="btn btn-info tag-button" data-tag="java">JAVA</button>
-      <button class="btn btn-info tag-button" data-tag="java">JAVA</button>
-      <button class="btn btn-info tag-button" data-tag="java">JAVA</button>
+      <button class="btn btn-info tag-button" data-tag="nodejs">NODEJS</button>
+      <button class="btn btn-info tag-button" data-tag="jquery">JQUERY</button>
+      <button class="btn btn-info tag-button" data-tag="react">REACT</button>
+      <button class="btn btn-info tag-button" data-tag="django">DJANGO</button>
+      <button class="btn btn-info tag-button" data-tag="angular">ANGULAR</button>
+      <button class="btn btn-info tag-button" data-tag="mongo">MONGO</button>
+      <button class="btn btn-info tag-button" data-tag="aws">AWS</button>
+      <button class="btn btn-info tag-button" data-tag="go">GO</button>
+      <button class="btn btn-info tag-button" data-tag="typescript">TYPESCRIPT</button>
+      <button class="btn btn-info tag-button" data-tag="git">GIT</button>
     </div>
     
     </div>
@@ -246,11 +249,17 @@
             <option value="c & c++" id="c">C & C++</option>
             <option value="c#" id="c#">C#</option>
             <option value="java" id="java">JAVA</option>
-            <option value="sql" id="java">SQL</option>
-            <option value="java" id="java">JAVA</option>
-            <option value="java" id="java">JAVA</option>
-            <option value="java" id="java">JAVA</option>
-            <option value="java" id="java">JAVA</option>
+            <option value="sql" id="sql">SQL</option>
+            <option value="nodejs" id="nodejs">NODEJS</option>
+            <option value="jquery" id="jquery">JQUERY</option>
+            <option value="react" id="react">REACT</option>
+            <option value="django" id="django">DJANGO</option>
+            <option value="angular" id="angular">ANGULAR</option>
+            <option value="mongo" id="mongo">MONGO</option>
+            <option value="aws" id="aws">AWS</option>
+            <option value="go" id="go">GO</option>
+            <option value="typescript" id="typescript">TYPESCRIPT</option>
+            <option value="git" id="git">GIT</option>
           </select>
         </div>
       </div>
