--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -66,9 +66,7 @@
         <div class="date-created">
           <p><i>John Doe posted</i> 5 September, 2023</p>
           <p class="card-text">"I feel like we are missing the script tag in our HTML."</p>
-          <div class="seePostbutton">
-          <button class="btn btn-primary" id="seePost" data-bs-toggle="modal" data-bs-target="#postModal">See post</button>
-          </div>
+          <a href="#" class="btn btn-primary" id="seePost" data-bs-toggle="modal" data-bs-target="#postModal">See post</a>
         </div>
       </div>
     </div>
@@ -89,9 +87,7 @@
           <a href="https://bootcamp.ce.ucf.edu/coding/">UCF Schedule</a>
           <p>12/11/23: Full-Time (12 weeks)</p>
           <p>10/10/23: Part-Time (24 weeks)</p>
-          <div class="seePostbutton">
-          <button class="btn btn-primary" id="seePost" data-bs-toggle="modal" data-bs-target="#postModal">See post</button>
-          </div>
+          <p><a href="#" class="btn btn-primary" id="seePost" data-bs-toggle="modal" data-bs-target="#postModal">See post</a></p>
         </div>
       </div>
     </div>
@@ -106,9 +102,7 @@
         <div class="date-created">
           <p><i>Jack Doe posted</i> 1 October, 2023</p>
           <p class="card-text">"I thought this would help anyone learning MYSQL and building their own database/api's!"</p>
-          <div class="seePostbutton">
-          <button class="btn btn-primary" id="seePost" data-bs-toggle="modal" data-bs-target="#postModal">See post</button>
-          </div>
+          <a href="#" class="btn btn-primary" id="seePost" data-bs-toggle="modal" data-bs-target="#postModal">See post</a>
         </div>
         </div>
     </div>
@@ -149,7 +143,7 @@
         </div>
       </div>
     </div>
-  
+ 
   <!--ENd of Modal code-->
   <br>
   <br>
