add picture to log in page

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -23,14 +23,14 @@
                 <ul class="nav-links">
                     <li><a href="../blog"> Blog </a></li>
                     <li><a href="../about"> About </a></li>
-                    <li><a href="../crud"> POST </a></li>
                     <li><a href="../resources"> Resources </a></li>
                     <li><a href="../contact"> Contact us</a></li>
-                    <li><a href="../login"> Logout </a></li> <!--Login page-->
+                    <!--Login page-->
                   </ul>
                 <div class="wrapper">
                     <form id="loginBtn">
                         <h1>login</h1>
+                        <img src="../images/code-image.jpg" height="100px;">
                         <div class="input-box">
 
                         </div>
