updating resources to make page responsive

--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -94,17 +94,18 @@
 
 
 
-<div class="resources-app">
-  <h1> <span class="res" style="font-size: 110px; letter-spacing: 6px; text-shadow: 4px 4px  #2d4848">RESOURCES</span><br/>for <i>programming</i><span class="fancy"><b> help</b></span> & <span class="fancy"><b> knowledge</b></span></h1>
+
+
+<div class="title">
+  <h1> <span class="res">RESOURCES</span><br/>for <i>programming</i><span class="fancy"><b> help</b></span> & <span class="fancy"><b> knowledge</b></span></h1>
 </div>
 
 
 
 
-
-
+  <div class="resources-app">
     <div class="spinner">
-      <div class="container mb-4 p-2 
+      <div class="container mb-2 p-2
                   text-light text-center"> 
           <div id="carouselExample" 
                class="carousel slide carousel-fade" 
@@ -114,8 +115,8 @@
 <!-- Stanley page -->
                   <div class="carousel-item bg-dark active" 
                        data-bs-interval="1750"> 
-                      <h1 class="m-4 text-white"> 
-                        Previously Recorded Video Content</h1> 
+                      <h2 class="m-4 text-white"> 
+                        Previously Recorded Video Content</h2> 
                       <div class="text-center"><a href="../html/stanley.html" target="_blank"><img src= "../images/ucf.jpg" 
                            alt="UCF LOGO"></a></div>
                            <h4 class="mt-3"> 
@@ -126,8 +127,8 @@
 <!-- W3schools Link -->
                   <div class="carousel-item bg-dark" 
                   data-bs-interval="1750"> 
-                      <h1 class="m-4 text-white text-center"> 
-                      Study with W3Schools</h1> 
+                      <h2 class="m-4 text-white text-center"> 
+                      Study with W3Schools</h2> 
                           <div class="text-center"><a href="https://www.w3schools.com/" target="_blank">
                           <img src= 
                           "../images/w3school.png"
@@ -141,8 +142,8 @@
 <!-- Stackoverflow link -->
                   <div class="carousel-item bg-dark" 
                        data-bs-interval="1750"> 
-                      <h1 class="m-4 text-white text-center"> 
-                        Ask Stack Overflow</h1> 
+                      <h2 class="m-4 text-white text-center"> 
+                        Ask Stack Overflow</h2> 
                       <div class="text-center"> <a href="https://stackoverflow.com/" target="_blank">
                           <img src= "../images/stack.png"
                               alt="stackOverFlow Logo"> </a>
@@ -155,8 +156,8 @@
 <!-- NPM link -->
                   <div class="carousel-item bg-dark" 
                   data-bs-interval="1750"> 
-                      <h1 class="m-4 text-white text-center"> 
-                      Use a package with NPM </h1> 
+                      <h2 class="m-4 text-white text-center"> 
+                      Use a package with NPM </h2> 
                           <div class="text-center"> <a href="https://www.npmjs.com/" target="_blank">
                           <img src= 
                           "../images/npm.png"
@@ -170,8 +171,8 @@
 <!-- MDN link -->
                   <div class="carousel-item bg-dark" 
                   data-bs-interval="1750"> 
-                      <h1 class="m-4 text-white text-center"> 
-                      Learn with MDN</h1> 
+                      <h2 class="m-4 text-white text-center"> 
+                      Learn with MDN</h2> 
                           <div class="text-center"> <a href="https://developer.mozilla.org/en-US/" target="_blank">
                           <img src= 
                           "../images/mdn.png"
@@ -205,13 +206,17 @@
           </div> 
       </div>
 </div>
+</div>
+
+
+<!-- End of Title/Spinner -->
 
 
 <br/>
 
     <div class="center">
     <div class="formTitle">
-     <h3>Add a Resource Link Below:</h3>  
+     <h4>Add a Resource Link Below:</h4>  
     </div>
 
     <form id="myForm">
