styling resources page

--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -97,7 +97,16 @@
 
 
 <div class="title">
-  <h1> <span class="res">RESOURCES</span><br/>for <i>programming</i><span class="fancy"><b> help</b></span> & <span class="fancy"><b> knowledge</b></span></h1>
+  <h1> 
+    <div class="grid">
+      <p class="stroke halftone">resources</p>
+      <p class="stroke halftone halftone-color">resources</p>
+    </div>
+    <!--  -->
+    <!-- this is a maybe -->
+    <!-- <span class="res">RESOURCES</span> -->
+    <!--  -->
+    <br/>for <i>programming</i><span class="fancy"><b> help</b></span> & <span class="fancy"><b> knowledge</b></span></h1>
 </div>
 
 
@@ -213,6 +222,10 @@
 
 
 <br/>
+<br/>
+
+
+
 
     <div class="center">
     <div class="formTitle">
