adding style to resource/responsive

--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -57,8 +57,8 @@
     </div>
 
      <div class="search-bar">
-      <input type="text" id="tagSearchInput" placeholder="Search by #Tag Name">
-      <button id="tagSearchButton">Search</button>
+      <input type="text" id="tagSearchInput" placeholder="Search">
+      <button id="tagSearchButton">🔍</button>
     </div>
   </div>
 
@@ -102,12 +102,20 @@
       <p class="stroke halftone">resources</p>
       <p class="stroke halftone halftone-color">resources</p>
     </div>
+    </h1>
+  </div>
+    
     <!--  -->
     <!-- this is a maybe -->
     <!-- <span class="res">RESOURCES</span> -->
     <!--  -->
-    <br/>for <i>programming</i><span class="fancy"><b> help</b></span> & <span class="fancy"><b> knowledge</b></span></h1>
+
+
+<div class="subtitle">
+    <h1><br/>for <i>programming</i><span class="fancy"><b> help</b></span> & <span class="fancy"><b> knowledge</b></span></h1>
 </div>
+
+
 
 
 
