--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -133,11 +133,11 @@
                   <div class="carousel-item bg-dark active" 
                        data-bs-interval="1750"> 
                       <h2 class="m-4 text-white"> 
-                        Previously Recorded Video Content</h2> 
-                      <div class="text-center"><a href="../html/stanley.html" target="_blank"><img src= "../images/ucf.jpg" 
+                        Previously Recorded Videos</h2> 
+                      <div class="imageCenter"><a href="../html/stanley.html" target="_blank"><img src= "../images/ucf.jpg" 
                            alt="UCF LOGO"></a></div>
                            <h4 class="mt-3"> 
-                            Click the image to go to site!</h4>
+                            click image for details</h4>
                   </div> 
                  
 
@@ -146,13 +146,13 @@
                   data-bs-interval="1750"> 
                       <h2 class="m-4 text-white text-center"> 
                       Study with W3Schools</h2> 
-                          <div class="text-center"><a href="https://www.w3schools.com/" target="_blank">
+                          <div class="imageCenter"><a href="https://www.w3schools.com/" target="_blank">
                           <img src= 
                           "../images/w3school.png"
                               alt="W3Schools LOGO"> </a>
                           </div> 
                       <h4 class="mt-3"> 
-                      Click the image to go to site!</h4> 
+                      click image for details</h4> 
                   </div> 
 
 
@@ -161,12 +161,12 @@
                        data-bs-interval="1750"> 
                       <h2 class="m-4 text-white text-center"> 
                         Ask Stack Overflow</h2> 
-                      <div class="text-center"> <a href="https://stackoverflow.com/" target="_blank">
+                      <div class="imageCenter"> <a href="https://stackoverflow.com/" target="_blank">
                           <img src= "../images/stack.png"
                               alt="stackOverFlow Logo"> </a>
                       </div> 
                       <h4 class="mt-3"> 
-                        Click the image to go to site!</h4> 
+                        click image for details</h4> 
                   </div> 
 
 
@@ -175,13 +175,13 @@
                   data-bs-interval="1750"> 
                       <h2 class="m-4 text-white text-center"> 
                       Use a package with NPM </h2> 
-                          <div class="text-center"> <a href="https://www.npmjs.com/" target="_blank">
+                          <div class="imageCenter"> <a href="https://www.npmjs.com/" target="_blank">
                           <img src= 
                           "../images/npm.png"
                               alt="NPM LOGO"> </a>
                           </div> 
                       <h4 class="mt-3"> 
-                      Click the image to go to site!</h4> 
+                      click image for details</h4> 
                   </div>
 
 
@@ -190,13 +190,13 @@
                   data-bs-interval="1750"> 
                       <h2 class="m-4 text-white text-center"> 
                       Learn with MDN</h2> 
-                          <div class="text-center"> <a href="https://developer.mozilla.org/en-US/" target="_blank">
+                          <div class="imageCenter"> <a href="https://developer.mozilla.org/en-US/" target="_blank">
                           <img src= 
                           "../images/mdn.png"
                               alt="MDN LOGO"> </a>
                           </div> 
                       <h4 class="mt-3"> 
-                      Click the image to go to site!</h4> 
+                      click image for details</h4> 
                   </div>
                   
 
@@ -237,7 +237,7 @@
 
     <div class="center">
     <div class="formTitle">
-     <h4>Add a Resource Link Below:</h4>  
+     <h5>Add a Resource Link Below:</h5>  
     </div>
 
     <form id="myForm">
