updating styling for resources

--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -229,15 +229,18 @@
 <!-- End of Title/Spinner -->
 
 
+
 <br/>
-<br/>
 
 
 
 
-    <div class="center">
-    <div class="formTitle">
-     <h5>Add a Resource Link Below:</h5>  
+<div class="center">
+  <div class="formTitle">
+
+
+    <div class="addLink">
+      <h1 contenteditable>Add a Link Below:</h1>
     </div>
 
     <form id="myForm">
