--- a/public/html/teambio.html
+++ b/public/html/teambio.html
@@ -70,9 +70,7 @@
       <div class="developer-position">
         <div class="flex-container">
           <img class="about-developers" src="../images/about-yesenia.png" alt="a picture of Abigail">
-          <p>"Mauris nunc urna, dignissim ac dignissim ac, accumsan ac massa. Duis a dolor a purus tristique tempus.
-            Aenean dapibus justo vitae aliquet laoreet. Etiam porttitor viverra condimentum. Morbi elementum fringilla
-            diam, quis fringilla eros faucibus et."</p>
+          <p>"My name is Yesenia and I am a full stack developer."</p>
         </div>
       </div>
       <div class="developer-position">
