--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -99,8 +99,8 @@
 <div class="title">
   <h1> 
     <div class="grid">
-      <p class="stroke halftone">resources</p>
-      <p class="stroke halftone halftone-color">resources</p>
+      <p class="stroke halftone">F2F</p>
+      <p class="stroke halftone halftone-color">BLOG</p>
     </div>
     </h1>
   </div>
