add post button functionality

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -122,7 +122,10 @@
           <div class="like-comment-section">
           <p><i class="bi bi-chat-dots comment"></i> Comment</p>
           </div>
-        <textarea class="form-control ml-1 shadow-none textarea"></textarea>
+        <!-- <textarea class="form-control ml-1 shadow-none textarea"></textarea> -->
+        <form id="">
+          <input type="text" class="form-control ml-1 shadow-none textarea" placeholder="Comment here...">
+        </form>
         </div>
         <div class="comment-section" data-comment-id="2345">
           <h3>Comments</h3>
