added Big Winner!

--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -95,7 +95,6 @@
 
 
 
-
 <div class="title">
   <h1> 
     <div class="grid">
@@ -227,13 +226,16 @@
 
 <br/>
 
+<div class="buttonS">
+<button class="Sbtn btn-info tag-button"> <a href="../html/stanley.html" > Big Winner! </a></button>
+</div>
 
 
+
+<br/>
+<hr/>
 
 <div class="center">
-  <div class="formTitle">
-
-
     <div class="addLink">
       <h1 contenteditable>Add a Link Below:</h1>
     </div>
@@ -242,7 +244,7 @@
 
       <!-- Comment Box -->
       <div class="form-group row">
-        <label for="commentArea" class="col-sm-2 col-form-label">Description: </label> 
+        <label for="commentArea" class="col-sm-2 col-form-label" id="describe">Description: </label> 
         <div class="col-sm-10">
           <textarea class="form-control" id="commentBox" placeholder="Add a description here" rows="5"></textarea>
         </div>
@@ -295,6 +297,12 @@
 
     </form>
     </div>
+
+  
+    <hr/>
+    <br/>
+    
+
     
     <!-- Displays new resource card -->
     <div class="displayNew" id="displayArea"></div>
