add stanley route

--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -134,7 +134,7 @@
                        data-bs-interval="1750"> 
                       <h2 class="m-4 text-white"> 
                         Previously Recorded Videos</h2> 
-                      <div class="imageCenter"><a href="../html/stanley.html" target="_blank"><img src= "../images/ucf.jpg" 
+                      <div class="imageCenter"><a href="/stanley" target="_blank"><img src= "../images/ucf.jpg" 
                            alt="UCF LOGO"></a></div>
                            <h4 class="mt-3"> 
                             click image for details</h4>
