--- a/public/html/teambio.html
+++ b/public/html/teambio.html
@@ -75,7 +75,7 @@
       </div>
       <div class="developer-position">
         <div class="flex-container">
-          <img class="about-developers" src="../images/about-joseph.png" alt="a picture of Abigail">
+          <img class="about-developers" src="../images/about-joseph.jpg" alt="a picture of Abigail">
           <p>"Mauris nunc urna, dignissim ac dignissim ac, accumsan ac massa. Duis a dolor a purus tristique tempus.
             Aenean dapibus justo vitae aliquet laoreet. Etiam porttitor viverra condimentum. Morbi elementum fringilla
             diam, quis fringilla eros faucibus et."</p>
