create function to fetch api with comment id and apped the html to comment area

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -124,17 +124,17 @@
           </div>
         <!-- <textarea class="form-control ml-1 shadow-none textarea"></textarea> -->
         <form id="">
-          <input type="text" class="form-control ml-1 shadow-none textarea" placeholder="Comment here...">
+          <input type="text" class="form-control ml-1 shadow-none textarea" id="commentTextArea" placeholder="Comment here...">
         </form>
         </div>
         <div class="comment-section" data-comment-id="2345">
           <h3>Comments</h3>
           <div class="comments" id="commentList">
-            <div class="comment-area" id="comment-id-1">
+            <div class="comment-container-1" id="comment-id-1">
             <img src="../images/pre-profile-pic1.jpg" width="20" height="20">
             <p>awesome post, I think this will help alot.</p>
             </div>
-            <div class="comment-area" id="comment-id-2">
+            <div class="comment-container-2" id="comment-id-2">
               <img src="../images/pre-profile-pic1.jpg" width="20" height="20">
               <p>cool!</p>
             </div>
