--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -129,7 +129,7 @@
         </div>
         <div class="comment-section" data-comment-id="2345">
           <h3>Comments</h3>
-          <div class="comments" id="commentList">
+          <div class="comments" id="commentList-1234">
             <div class="comment-container-1" id="comment-id-1">
             <img src="../images/pre-profile-pic1.jpg" width="20" height="20">
             <p>awesome post, I think this will help alot.</p>
