added new html and css

--- a/public/html/teambio.html
+++ b/public/html/teambio.html
@@ -70,7 +70,7 @@
       <div class="developer-position">
         <div class="flex-container">
           <img class="about-developers" src="../images/about-yesenia.png" alt="a picture of Abigail">
-          <p>"My name is Yesenia and I am a full stack developer."</p>
+          <p>"My name is Yesenia and I am a full stack developer. ."</p>
         </div>
       </div>
       <div class="developer-position">
