logged in users profile pic now appears in the navbar

--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -34,8 +34,8 @@
         <li><a href="../login"> Logout </a></li>
       </ul>
 
-      <div class="profile-img">
-        <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
+      <div class="user-profile-img">
+        <!-- <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40"> -->
       </div>
 
     </div>
@@ -69,6 +69,8 @@
           alt="F2F fist to five logo" width="30" height="30"></p>
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="../js/contact.js"></script>
 </body>
 
 </html>
