--- a/public/html/about.html
+++ b/public/html/about.html
@@ -33,8 +33,8 @@
         <li><a href="../login"> Logout </a></li>
       </ul>
 
-      <div class="profile-img">
-        <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
+      <div class="user-profile-img">
+        <!-- <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40"> -->
       </div>
 
     </div>
@@ -102,9 +102,10 @@
           alt="F2F fist to five logo" width="30" height="30"></p>
 
   </footer>
-
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"> 
   </script> 
+  <script src="../js/about.js"></script>
 </body>
 
 </html>
