--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -33,8 +33,8 @@
         <li><a href="../login"> Logout </a></li> <!--Login page-->
       </ul>
 
-      <div class="profile-img">
-        <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
+      <div class="user-profile-img">
+        <!-- <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40"> -->
       </div>
 
     </div>
