--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -36,8 +36,8 @@
         <li><a href="../login"> Logout </a></li>
       </ul>
 
-      <div class="profile-img">
-        <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
+      <div class="user-profile-img">
+        <!-- <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40"> -->
       </div>
 
     </div>
