changed date format and added usernames to comments

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -113,11 +113,13 @@
     <div id="postModal" class="modal" role="dialog" tabindex="-1">
       <div class="modal-content modalEdit">
         <img id="postImage" src="" alt="">
+        <br>
+        <img id="modalProfilePic" class="profile-pic" src="" alt="" width="40" height="40">
+        <br>
         <div id="postContent">
           <!--post title and text will load here-->
         </div>
-        <img id="modalProfilePic" src="" alt="" width="40" height="40">
-        <br>
+        
         <div class="comment-section">
           <div class="like-comment-section">
           <p><i class="bi bi-chat-dots comment"></i> Comment</p>
