add dynamic login/logout button, it just needs styling

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -18,7 +18,7 @@
 
 <body>
   <nav class="navbar bg-body-tertiary">
-    <div class="container">
+    <div class="container navContainer">
       <a class="navbar-brand" href="../blog">
         <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
       </a>
@@ -29,10 +29,9 @@
         <li><a href="../crud"> POST </a></li>
         <li><a href="../resources"> Resources </a></li>
         <li><a href="../contact"> Contact us</a></li>
-        <li><a href="../login"> Logout </a></li> <!--Login page-->
       </ul>
 
-      <div class="user-profile-img">
+      <div class="user-profile-img row">
         <!-- <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40"> -->
       </div>
 
