added new page forgotpass and css

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -45,7 +45,7 @@
 
                         <div class="remember-forgot">
                             <label><input type="checkbox"> Remember me</label>
-                            <a href="#">Forgot password</a>
+                            <a href="../html/forgotPassword.html">Forgot password</a>
                         </div>
                         <button type="submit" class="btn">login</button>
                         <div class="register-link">
@@ -86,6 +86,6 @@
                     </form>
                   </div>
                 <script src="../js/login.js"></script>
-</body>
+               
 
 </html>
