--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -5,14 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>F2F BLOG</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel="icon" type="image/x-icon" href="../images/favicon1.png">
   <link rel="stylesheet" type="text/css" href="../css/blog.css" />
- 
+
 
 </head>
 
@@ -55,9 +56,9 @@
 
   <div class="blog-post-area" id="blog-post-area">
     <!--template for blog card post below-->
-    <div class="card" style="width: 18rem;">
-      <img src="../images/pre-post1.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
+    <!-- <div class="card" style="width: 18rem;">
+      <img src="../images/pre-post1.jpg" class="card-img-top" alt="..."> -->
+    <!-- <div class="card-body">
         <h5 class="card-title">JavaScript</h5>
         <div class="profile-img">
           <img src="../images/pre-profile-pic1.jpg" class="profile-pic-match" alt="profile-pic" width="40" height="40">
@@ -68,11 +69,11 @@
           <a href="#" class="btn btn-primary" id="seePost" data-bs-toggle="modal" data-bs-target="#postModal">See post</a>
         </div>
       </div>
-    </div>
+    </div> -->
     <!--end of blog post car template -->
     <!--pre-post templates(3)-->
 
-    <div class="card" style="width: 18rem;">
+    <!-- <div class="card" style="width: 18rem;">
       <img src="../images/pre-post3.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Ucf bootcamp</h5>
@@ -89,9 +90,9 @@
           <p><a href="#" class="btn btn-primary" id="seePost" data-bs-toggle="modal" data-bs-target="#postModal">See post</a></p>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div class="card" style="width: 18rem;">
+    <!-- <div class="card" style="width: 18rem;">
       <img src="../images/pre-post2.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Mysql</h5>
@@ -104,26 +105,26 @@
           <a href="#" class="btn btn-primary" id="seePost" data-bs-toggle="modal" data-bs-target="#postModal">See post</a>
         </div>
         </div>
-    </div>
-    </div>
-    <!--End of pre-BLOGS-->
+    </div> -->
+  </div>
+  <!--End of pre-BLOGS-->
 
-    <!--Modal pop up when user click on blog posts-->
-    <div id="postModal" class="modal" role="dialog" tabindex="-1">
-      <div class="modal-content modalEdit">
-        <img id="postImage" src="" alt="">
-        <br>
-        <img id="modalProfilePic" class="profile-pic" src="" alt="" width="40" height="40">
-        <br>
-        <div id="postContent">
-          <!--post title and text will load here-->
-        </div>
-        
-        
-        <div class="comment-section" data-comment-id="2345">
-          <h3>Comments</h3>
-          <div class="comments" id="commentList">
-            <!-- <div class="comment-container-1" id="comment-id-1">
+  <!--Modal pop up when user click on blog posts-->
+  <div id="postModal" class="modal" role="dialog" tabindex="-1">
+    <div class="modal-content modalEdit">
+      <img id="postImage" src="" alt="">
+      <br>
+      <img id="modalProfilePic" class="profile-pic" src="" alt="" width="40" height="40">
+      <br>
+      <div id="postContent">
+        <!--post title and text will load here-->
+      </div>
+
+
+      <div class="comment-section" data-comment-id="2345">
+        <h3>Comments</h3>
+        <div class="comments" id="commentList">
+          <!-- <div class="comment-container-1" id="comment-id-1">
           <div class="comments" id="commentList-1234">
             <div class="comment-container-1" id="comment-id-1">
             <img src="../images/pre-profile-pic1.jpg" width="20" height="20">
@@ -131,28 +132,30 @@
             </div>
             <div class="comment-container-2" id="comment-id-2">
             </div> -->
-            <!-- <div class="comment-container-2" id="comment-id-2">
+          <!-- <div class="comment-container-2" id="comment-id-2">
               <img src="../images/pre-profile-pic1.jpg" width="20" height="20">
               <p>cool!</p>
             </div> -->
-          </div>
-        </div>
-        <div class="comment-section">
-          <div class="like-comment-section">
-          <p><i class="bi bi-chat-dots comment"></i> Comment</p>
-          </div>
-        <!-- <textarea class="form-control ml-1 shadow-none textarea"></textarea> -->
-        <form id="">
-          <input type="text" class="form-control ml-1 shadow-none textarea" id="commentTextArea" placeholder="Comment here...">
-        </form>
-        </div>
-        <div class="modal-button">
-          <button class="modal-comment-button" id="comment" type="submit">Post comment</button>
-        <button class="modal-close-button close-button" id="close" data-dismiss="modal" aria-label="Close">Cancel</button>
         </div>
       </div>
+      <div class="comment-section">
+        <div class="like-comment-section">
+          <p><i class="bi bi-chat-dots comment"></i> Comment</p>
+        </div>
+        <!-- <textarea class="form-control ml-1 shadow-none textarea"></textarea> -->
+        <form id="">
+          <input type="text" class="form-control ml-1 shadow-none textarea" id="commentTextArea"
+            placeholder="Comment here...">
+        </form>
+      </div>
+      <div id="modal-button" class="modal-button">
+        <!-- <button class="modal-comment-button" id="comment" type="submit">Post comment</button> -->
+        <button class="modal-close-button close-button" id="close" data-dismiss="modal"
+          aria-label="Close">Cancel</button>
+      </div>
     </div>
- 
+  </div>
+
   <!-- ENd of Modal code -->
   <br>
   <br>
@@ -188,10 +191,16 @@
       </div>
     </footer>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script async src="../js/youtube.js"></script>
-<script defer type="module" src="../js/blog.js"></script>  
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"></script>
+    <script async src="../js/youtube.js"></script>
+    <script defer type="module" src="../js/blog.js"></script>
 
 </html>
