--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -56,7 +56,7 @@
 
   <div class="blog-post-area" id="blog-post-area">
     <!--template for blog card post below-->
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 18rem;" data-content-id="modal-1">
       <img src="../images/pre-post1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">JavaScript</h5>
@@ -73,7 +73,7 @@
     <!--end of blog post car template -->
     <!--pre-post templates(3)-->
 
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 18rem;" data-content-id="modal-2">
       <img src="../images/pre-post3.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Ucf bootcamp</h5>
@@ -92,7 +92,7 @@
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 18rem;" data-content-id="modal-3">
       <img src="../images/pre-post2.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Mysql</h5>
@@ -129,12 +129,12 @@
         </div>
         <div class="comment-section" data-comment-id="2345">
           <h3>Comments</h3>
-          <div class="comments" id="commentList-1234">
-            <div class="comment-container-1" id="comment-id-1">
+          <div class="comments" id="commentList">
+            <div class="comment-container-1" id="1">
             <img src="../images/pre-profile-pic1.jpg" width="20" height="20">
             <p>awesome post, I think this will help alot.</p>
             </div>
-            <div class="comment-container-2" id="comment-id-2">
+            <div class="comment-container-2" id="2">
               <img src="../images/pre-profile-pic1.jpg" width="20" height="20">
               <p>cool!</p>
             </div>
@@ -148,18 +148,7 @@
     </div>
  
   <!--ENd of Modal code-->
-  <br>
-  <br>
-
-  <div class="videos-container">
-    <h1>Tutorial Videos</h1>
-    <div class="youtube-box">
-      <div class="fetched-videos">
-
-      </div>
-
-    </div>
-    <br>
+  
     <footer>
       <div class="footer-container">
         <div class="social">
