updated nav bar

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -19,11 +19,25 @@
 
 <body>
   <nav class="navbar bg-body-tertiary">
-    <div class="container navContainer">
+    <div class="container">
+
+
+<!-- F2F menu bar -->
+<div class="menu">
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()"> &#9776; F2F menu</span>
+  </div>
+      
+
+
+
       <a class="navbar-brand" href="../blog">
         <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
       </a>
 
+<!-- F2f Menu bar -->
+<div id="myNav" class="overlay">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <div class="overlay-content">
       <ul class="nav-links">
         <li><a href="../blog"> Blog </a></li>
         <li><a href="../about"> About </a></li>
@@ -31,6 +45,9 @@
         <li><a href="../resources"> Resources </a></li>
         <li><a href="../contact"> Contact us</a></li>
       </ul>
+      </div>
+      </div>
+
 
       <div class="user-profile-img row">
         <!-- <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40"> -->
@@ -191,6 +208,18 @@
       </div>
     </footer>
 
+
+    <!-- JS for NavBar -->
+    <script>
+      function openNav() {
+        document.getElementById("myNav").style.height = "100%";
+      }
+      
+      function closeNav() {
+        document.getElementById("myNav").style.height = "0%";
+      }
+      </script>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"></script>
@@ -201,6 +230,7 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"></script>
     <script async src="../js/youtube.js"></script>
+
     <script defer type="module" src="../js/blog.js"></script>
 
 </html>
