--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -197,7 +197,7 @@
             <li><a href="../about"> About </a></li>
             <li><a href="../blog"> Blog </a></li>
             <li><a href="../resources"> Resources </a></li>
-            <li><a href="../contact"> Contact </a></li>
+            <li><a href="../contact"> Contact us </a></li>
             <li><a href="../teambio"> Our Team</a></li>
           </ul>
         </div>
