--- a/public/html/stanley.html
+++ b/public/html/stanley.html
@@ -16,32 +16,48 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel="icon" type="image/x-icon" href="../images/favicon1.png">
   <!--we can change color, leave feedback on favicon by url (blue hand at top)-->
-  <link rel="stylesheet" type="text/css" href="../css/stanley.css" />
+  <link rel="stylesheet" type="text/css" href="../css/resources.css" />
 
 </head>
 
 <body>
-  <nav class="navbar bg-body-tertiary">
-    <div class="container">
-      <a class="navbar-brand" href="../blog">
-        <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
-      </a>
-
-      <ul class="nav-links">
-        <li><a href="../blog"> Blog </a></li>
-        <li><a href="../about"> About </a></li>
-        <li><a href="../crud"> POST </a></li>
-        <li><a href="../resources"> Resources </a></li>
-        <li><a href="../contact"> Contact us </a></li>
-        <li><a href="../login"> Logout </a></li>
-      </ul>
-
-      <div class="profile-img">
-        <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
-      </div>
-
-    </div>
-  </nav>
+   <nav class="navbar bg-body-tertiary">
+     <div class="container">
+ 
+ 
+ <!-- F2F menu bar -->
+ <div class="menu">
+   <span style="font-size:30px;cursor:pointer" onclick="openNav()"> &#9776; F2F menu</span>
+   </div>
+       
+ 
+ 
+       <a class="navbar-brand" href="../blog">
+         <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
+       </a>
+ 
+ <!-- F2f Menu bar -->
+ <div id="myNav" class="overlay">
+   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+   <div class="overlay-content">
+       <ul class="nav-links">
+         <li><a href="../blog"> Blog </a></li>
+         <li><a href="../about"> About </a></li>
+         <li><a href="../crud"> POST </a></li>
+         <li><a href="../resources"> Resources </a></li>
+         <li><a href="../contact"> Contact us</a></li>
+       </ul>
+       </div>
+       </div>
+ 
+ 
+       <div class="user-profile-img row">
+         <!-- <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40"> -->
+       </div>
+ 
+     </div>
+   </nav>
+   <br>
 
 
   <h1>Stanley's Previous Cohort Videos</h1>
