--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -20,10 +20,23 @@
 <body>
   <nav class="navbar bg-body-tertiary">
     <div class="container">
+
+
+<!-- F2F menu bar -->
+<div class="menu">
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()"> &#9776; F2F menu</span>
+  </div>
+      
+
+
       <a class="navbar-brand" href="../blog">
         <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
       </a>
 
+<!-- F2f Menu bar -->
+<div id="myNav" class="overlay">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <div class="overlay-content">
       <ul class="nav-links">
         <li><a href="../blog"> Blog </a></li>
         <li><a href="../about"> About </a></li>
@@ -31,8 +44,11 @@
         <li><a href="../resources"> Resources </a></li>
         <li><a href="../contact"> Contact us</a></li>
       </ul>
+      </div>
+      </div>
 
-      <div class="user-profile-img">
+
+      <div class="user-profile-img row">
         <!-- <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40"> -->
       </div>
 
@@ -110,6 +126,20 @@
     </footer>
  
 
+
+
+
+    
+ <!-- JS for NavBar -->
+ <script>
+  function openNav() {
+    document.getElementById("myNav").style.height = "100%";
+  }
+  
+  function closeNav() {
+    document.getElementById("myNav").style.height = "0%";
+  }
+  </script> 
 
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
     crossorigin="anonymous"></script>
