updating Stanley page with table to be responsive

--- a/public/html/stanley.html
+++ b/public/html/stanley.html
@@ -71,14 +71,38 @@
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
            data-bs-target="#flush-collapseOne" aria-expanded="false"
            aria-controls="flush-collapseOne">
-        Accordion Item #1
+        HTML, CSS, GIT
         </button>
      </h2>
      <div id="flush-collapseOne" class="accordion-collapse collapse"
         aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended
-           to demonstrate the <code>.accordion-flush</code> class. This is the first item's
-           accordion body.
+        <div class="accordion-body">
+         
+         <table>
+         <tr>
+           <th>2023</th>
+           <th>2022</th>
+           <th>2021</th>
+         </tr>
+         <tr>
+           <td><a href="https://zoom.us/rec/play/EHKfwYRzcyw8lT2b4ttLPfFCw9pVfOO6e5DYFKcfec95lsN7TwYrpEUbRp6NTdNOiJAPRODSbXrop3g.iJYi03cjKkgSnLO4
+            " target="_blank">DAY 1</a></td>
+           <td><a href="https://www.w3schools.com/" target="_blank">DAY 1</a></td>
+           <td><a href="https://www.w3schools.com/" target="_blank">DAY 1</a></td>
+         </tr>
+         <tr>
+            <td><a href="https://zoom.us/rec/play/JREpC9ZOr1IQpZqT_gNTbHM_SMJgRw3M0rfWXmXo1SzOW28EUMbtMYMvs9w181wjShBPgslGiLnW5Gkm.pPCVv11u2tpSS048" target="_blank">DAY 2</a></td>
+            <td><a href="https://www.w3schools.com/" target="_blank">DAY 2</a></td>
+            <td><a href="https://www.w3schools.com/" target="_blank">DAY 2</a></td>
+         </tr>
+         <tr>
+           <td><a href="https://zoom.us/rec/play/VcnbQgkI8iT5DeOGcKKDCDGRJzjC4JNPl0f7AL8dE5WDPIGiIb9I5TFrWO90iZaxHLBchEyjT8kRq3tY.XVC4HUAad_u7opQ6
+            " target="_blank">DAY 3</a></td>
+           <td><a href="https://www.w3schools.com/" target="_blank">DAY 3</a></td>
+           <td><a href="https://www.w3schools.com/" target="_blank">DAY 3</a></td>
+          </tr>
+       </table>
+
         </div>
      </div>
   </div>
