add logout button to navbar

--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -247,7 +247,7 @@
 <br/>
 
 <div class="buttonS">
-<button class="Sbtn btn-info tag-button"> <a href="../html/stanley.html" > Big Winner! </a></button>
+<button class="Sbtn btn-info tag-button"> <a href="../stanley" > Big Winner! </a></button>
 </div>
 
 
