update/debug to respond

--- a/public/html/stanley.html
+++ b/public/html/stanley.html
@@ -61,7 +61,7 @@
 
 
   <h1>Stanley's Previous Cohort Videos</h1>
-  <p>Previously recorded video content related to MERN stack learning!</p>
+  <div class="under">Previously recorded video content related to MERN stack learning!</div>
 
 
  <div class="videos"> 
