adding videos to stanley page

--- a/public/html/teambio.html
+++ b/public/html/teambio.html
@@ -74,7 +74,7 @@
       <div class="developer-position">
         <div class="flex-container">
           <img class="about-developers" src="../images/about-katie.jpg" alt="a picture of Katie">
-          <p>"A Full Stack Web Developer in the making, with a passion for health, fitness, yoga, travel, and music."</p>
+          <p>"A Full Stack Web Developer in the making, with a passion for health/fitness, yoga, travel, music, and fine arts."</p>
         </div>
       </div>
       <div class="developer-position">
