updated contact us page to link with team bio

--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -347,7 +347,7 @@
           <li><a href="../blog"> Blog </a></li>
           <li><a href="../resources"> Resources </a></li>
           <li><a href="../contact"> Contact us </a></li>
-          <li><a href="../teambio"> Our Team</a></li>
+          <!-- <li><a href="../teambio"> Our Team</a></li> -->
         </ul>
       </div>
     </div>
