--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -14,9 +14,10 @@
   <link rel="icon" type="image/x-icon" href="../images/favicon1.png">
   <!--we can change color, leave feedback on favicon by url (blue hand at top)-->
   <link rel="stylesheet" type="text/css" href="../css/blog.css" />
-  <link rel="stylesheet" type="text/css" href="../css/blog.css" />
+
 
 </head>
+<!--Names are mentioned in html to type your short bio or comment-->
 
 <body>
   <nav class="navbar bg-body-tertiary">
@@ -57,12 +58,49 @@
   </nav>
   <br>
 
-  <div class="contact-section">
-    <h1>Contact</h1>
-    <p>Each of our github pages here, including project repo github, our emails, fake number or real lol...</p>
-
+  
+  <div class="TeamMember-shortBio">
+    <h1>Contributers</h1>
   </div>
 
+  <div class="about-developers">
+    <div class="developer-cards">
+      <div class="developer-position">
+        <div class="flex-container">
+          <img class="about-developers" src="../images/about-abigail.jpg" alt="a picture of Abigail">
+          <p>"Ambitious Full stack developer student, I am Known for taking on challenges and expanding my skills and knowledge in many talents. Military retired brat, some college in business. I am hoping to become a freelance web developer or work for a good company in tech engineer! "</p>
+        </div>
+      </div>
+      <div class="developer-position">
+        <div class="flex-container">
+          <img class="about-developers" src="../images/about-katie.jpg" alt="a picture of Katie">
+          <p>"A Full Stack Web Developer in the making, with a passion for health/fitness, yoga, travel, music, and fine arts."</p>
+        </div>
+      </div>
+      <div class="developer-position">
+        <div class="flex-container">
+          <img class="about-developers" src="../images/about-Nathaniel.jpg" alt="a picture of Abigail">
+          <p>"Junior Web Dev specializing in the MERN Stack, currently enrolled in UCF's Full-Stack Coding Bootcamp"</p>
+        </div>
+      </div>
+      <div class="developer-position">
+        <div class="flex-container">
+          <img class="about-developers" src="../images/about-yesenia.png" alt="a picture of Abigail">
+          <p>"My name is Yesenia and I am a full stack developer. ."</p>
+        </div>
+      </div>
+      <div class="developer-position">
+        <div class="flex-container">
+          <img class="about-developers" src="../images/about-joseph.jpg" alt="a picture of Abigail">
+          <p>"Mauris nunc urna, dignissim ac dignissim ac, accumsan ac massa. Duis a dolor a purus tristique tempus.
+            Aenean dapibus justo vitae aliquet laoreet. Etiam porttitor viverra condimentum. Morbi elementum fringilla
+            diam, quis fringilla eros faucibus et."</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <br>
   <footer>
     <div class="footer-container">
       <div class="social">
@@ -75,7 +113,7 @@
           <li><a href="../blog"> Blog </a></li>
           <li><a href="../resources"> Resources </a></li>
           <li><a href="../contact"> Contact us </a></li>
-          <li><a href="../teambio"> Our Team</a></li>
+          <!-- <li><a href="../teambio"> Our Team</a></li> -->
         </ul>
       </div>
     </div>
@@ -85,7 +123,7 @@
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="../js/contact.js"></script>
+  <script src="../js/teambio.js"></script>
 </body>
 
 </html>
