--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -115,7 +115,7 @@
             <li><a href="../blog"> Blog </a></li>
             <li><a href="../resources"> Resources </a></li>
             <li><a href="../contact"> Contact </a></li>
-            <li><a href="../teambio"> Our Team</a></li>
+            <!-- <li><a href="../teambio"> Our Team</a></li> -->
           </ul>
         </div>
       </div>
