team bio/contact us page DONE - debug and responsive on all devices!

--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -79,7 +79,7 @@
             <a href="" target="_blank"><i class="bi bi-github github"></i></a>
           </div>
 
-          <p>"Ambitious Full stack developer student, I am Known for taking on challenges and expanding my skills and knowledge in many talents. Military retired brat, some college in business. I am hoping to become a freelance web developer or work for a good company in tech engineer! "</p>
+          <p>"Ambitious Full stack developer student, I am Known for taking on challenges and expanding my skills and knowledge in many talents. Military retired brat, some college in business. I am hoping to become a freelance web developer or work for a good company in tech engineer!"</p>
         </div>
       </div>
 
@@ -111,7 +111,7 @@
             <a href="" target="_blank"><i class="bi bi-github github"></i></a>
           </div>
 
-          <p>"Junior Web Dev specializing in the MERN Stack, currently enrolled in UCF's Full-Stack Coding Bootcamp"</p>
+          <p>"Junior Web Dev specializing in the MERN Stack, currently enrolled in UCF's Full-Stack Coding Bootcamp."</p>
         </div>
       </div>
 
@@ -127,7 +127,7 @@
             <a href="" target="_blank"><i class="bi bi-github github"></i></a>
           </div>
 
-          <p>"My name is Yesenia and I am a full stack developer. ."</p>
+          <p>"My name is Yesenia and I am a full stack developer."</p>
         </div>
       </div>
 
