--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -61,7 +61,7 @@
   
   <div class="TeamMember-shortBio">
     <div class="teamback">
-    <h1>Contributers</h1>
+    <h1>Contact Us</h1>
     <h2>Meet the team behind F2F Blog</h2>
 
 
