debug and done!

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -192,7 +192,7 @@
 
         
 
-        <p>At F2F Blog, we're on a mission to fuel your coding and learning journey. Our focus is to provide valuable insights, resources, and expertise in programming, making knowledge accessible to everyone.
+        <p>At F2F Blog, we're on a mission to enhance your coding and learning journey. Our focus is to provide valuable insights, resources, and expertise in programming, making knowledge accessible to everyone.
           <br/>
           <br/>
           <br/>
