--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -132,6 +132,7 @@
       <img id="postImage" src="" alt="">
       <br>
       <img id="modalProfilePic" class="profile-pic" src="" alt="" width="40" height="40">
+      <p id="modalUserName"></p>
       <br>
       <div id="postContent">
         <!--post title and text will load here-->
