changed location of image uploader

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -71,6 +71,8 @@
   </div>
   <br>
 
+  
+  <div id="uploadImage"></div>
   <div class="blog-post-area" id="blog-post-area">
     <!--template for blog card post below-->
     <!-- <div class="card" style="width: 18rem;">
