add styling to cards

--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -108,7 +108,7 @@
           <div class="ghub">
 
             <!-- Add GITHUB page below -->
-            <a href="" target="_blank"><i class="bi bi-github github"></i></a>
+            <a href="https://github.com/newprice247" target="_blank"><i class="bi bi-github github"></i></a>
           </div>
 
           <p>"Junior Web Dev specializing in the MERN Stack, currently enrolled in UCF's Full-Stack Coding Bootcamp."</p>
