bug fixing and add more seed data

--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -32,7 +32,7 @@
 
 
       <a class="navbar-brand" href="../blog">
-        <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
+        <img src="../images/F2F BLOG Logo.png" class="rounded" alt="F2F fist to five logo" width="150" height="50">
       </a>
 
 <!-- F2f Menu bar -->
