--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -30,8 +30,8 @@
 
 
 
-      <a class="navbar-brand" href="../blog">
-        <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
+      <a class="navbar-brand" href="../blog" >
+        <img src="../images/F2F BLOG Logo.png" class="rounded" alt="F2F fist to five logo" width="150" height="50">
       </a>
 
 <!-- F2f Menu bar -->
