--- a/public/html/login.html
+++ b/public/html/login.html
@@ -19,7 +19,7 @@
         <nav class="navbar">
         
             <a class="navbar-brand" href="../blog">
-              <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
+              <img src="../images/F2F BLOG Logo.png" class="rounded" alt="F2F fist to five logo" width="150" height="50">
             </a>
                 <ul class="nav-links">
                     <li><a href="../blog"> Blog </a></li>
