--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -243,12 +243,21 @@
 
 
 
-
 <br/>
 
 <div class="buttonS">
-<button class="Sbtn btn-info tag-button"> <a href="../stanley" > Big Winner! </a></button>
+ 
+  
+ 
+  <button class="Sbtn btn-info" id="myButton">Big Winner!</button>
+ 
+
+
+
 </div>
+
+
+
 
 
 <br/>
@@ -361,6 +370,7 @@
     crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"> 
     </script> 
+
   <script src="../js/resources.js"></script>
 
 </body>
