--- a/public/html/teambio.html
+++ b/public/html/teambio.html
@@ -75,7 +75,7 @@
       </div>
       <div class="developer-position">
         <div class="flex-container">
-          <img class="about-developers" src="../images/about-joseph.jpg" alt="a picture of Abigail">
+          <img class="about-developers" src="../images/about-joseph.jpg" alt="a picture of Joseph">
           <p>"Junior Web Dev specializing in MERN Full Stack with a background in electronic engineering because learning is fun!!"</p>
         </div>
       </div>
