--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -142,13 +142,11 @@
             
 
             <!-- Add GITHUB page below -->
-            <a href="" target="_blank"><i class="bi bi-github github"></i></a>
+            <a href="https://github.com/Josephonate" target="_blank"><i class="bi bi-github github"></i></a>
           </div>
 
 
-          <p>"Mauris nunc urna, dignissim ac dignissim ac, accumsan ac massa. Duis a dolor a purus tristique tempus.
-            Aenean dapibus justo vitae aliquet laoreet. Etiam porttitor viverra condimentum. Morbi elementum fringilla
-            diam, quis fringilla eros faucibus et."</p>
+          <p>"Project engineer and Junior Web Dev specializing in the MERN Stack"</p>
         </div>
       </div>
     </div>
