--- a/public/html/teambio.html
+++ b/public/html/teambio.html
@@ -69,7 +69,7 @@
       <div class="developer-position">
         <div class="flex-container">
           <img class="about-developers" src="../images/about-yesenia.png" alt="a picture of Abigail">
-          <p>"My name is Yesenia and I am a full stack developer. ."</p>
+          <p>"A software developer who is ready to start this journey showing off my skill set and passion I have for web development."</p>
         </div>
       </div>
       <div class="developer-position">
