--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -76,7 +76,7 @@
           <div class="ghub">
 
             <!-- Add GITHUB page below -->
-            <a href="" target="_blank"><i class="bi bi-github github"></i></a>
+            <a href="https://github.com/Ariesscode" target="_blank"><i class="bi bi-github github"></i></a>
           </div>
 
           <p>"Ambitious Full stack developer student, I am Known for taking on challenges and expanding my skills and knowledge in many talents. Military retired brat, some college in business. I am hoping to become a freelance web developer or work for a good company in tech engineer!"</p>
@@ -124,10 +124,10 @@
           <div class="ghub">
 
             <!-- Add GITHUB page below -->
-            <a href="" target="_blank"><i class="bi bi-github github"></i></a>
+            <a href="https://github.com/yeseniax2" target="_blank"><i class="bi bi-github github"></i></a>
           </div>
 
-          <p>"My name is Yesenia and I am a full stack developer."</p>
+          <p>"A software developer who is ready to start this journey showing off my skill set and passion I have for web development."</p>
         </div>
       </div>
 
@@ -142,13 +142,11 @@
             
 
             <!-- Add GITHUB page below -->
-            <a href="" target="_blank"><i class="bi bi-github github"></i></a>
+            <a href="https://github.com/Josephonate" target="_blank"><i class="bi bi-github github"></i></a>
           </div>
 
 
-          <p>"Mauris nunc urna, dignissim ac dignissim ac, accumsan ac massa. Duis a dolor a purus tristique tempus.
-            Aenean dapibus justo vitae aliquet laoreet. Etiam porttitor viverra condimentum. Morbi elementum fringilla
-            diam, quis fringilla eros faucibus et."</p>
+          <p>"Junior Web Dev specializing in MERN Full Stack with a background in electronic engineering because learning is fun!!"</p>
         </div>
       </div>
     </div>
