updated stanley video for module 19 adn 20

--- a/public/html/stanley.html
+++ b/public/html/stanley.html
@@ -1169,8 +1169,8 @@
        <!-- DAY ONE VIDEOS -->
        <tr>
           <!-- 2023 -->
-         <td>
-             TBA</td>
+          <td>
+            <a href="https://zoom.us/rec/play/4DULyFmXt2v5zmOoSid8prYMRUzdPsrPY3LwUHluHkt-CrxvfAbYzAwaj8lvYamsXPDGG5E71LKohRk.JySOaXBogOev_jIM" target="_blank">DAY 1</a></td>
 
           <!-- 2022 -->
           <td>
@@ -1185,8 +1185,8 @@
        <!-- DAY 2 VIDEOS -->
        <tr>
           <!-- 2023 -->
-          <td> 
-            TBA</td>
+          <td>
+            <a href="https://zoom.us/rec/play/Or3xbJKtRjGquDGdTlmXSjBe2AdatWqmiE7XqTPrxh7Er729R1GcXdYKG1h7yhrbM3wfRzjpNglsanJY.7rE-oQRVTR5EDA2e" target="_blank">DAY 2</a></td>
              
           <!-- 2022 -->
           <td>
@@ -1201,7 +1201,7 @@
        <tr>
           <!-- 2023 -->
           <td>
-            TBA</td>
+            <a href="https://zoom.us/rec/play/-aVpoBjkIosRYKm9aPsp5dTFvDrNWM-7md81JtvLRs6AvQ0ELQI7mjuLhfWarMGeJfipU6M59JdPS_f7.3hau8TU3VKysqqKl" target="_blank">DAY 3</a></td>
 
           <!-- 2022 -->
           <td>
@@ -1243,8 +1243,8 @@
        <!-- DAY ONE VIDEOS -->
        <tr>
           <!-- 2023 -->
-         <td>
-             TBA</td>
+          <td>
+            <a href="https://zoom.us/rec/play/Vi1dXi9R4fXqZB-j72M10548NwinAZMjl-KjiQfDMvvjhZxX3lnj3JxIJyCLmj6ObEUi94XVREEr4hRc.WDn-GcAr8oaugOuo" target="_blank">DAY 1</a></td>
 
           <!-- 2022 -->
           <td>
